# internal/swagger/swagger.yml
@@ -93,6 +93,14 @@ paths:
         - post
       summary: Update a post
       operationId: updatePost
+      parameters:
+        - name: id
+          in: path
+          description: ID of post to return
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         description: Update a new post
         content:
@@ -116,6 +124,14 @@ paths:
         - post
       summary: Delete a post
       operationId: deletePost
+      parameters:
+        - name: id
+          in: path
+          description: ID of post to return
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: Successful operation
@@ -127,7 +143,7 @@ paths:
           description: Invalid input
         '422':
           description: Validation exception
-  /user/current:
+  /users/current:
     get:
       tags:
         - user
@@ -169,6 +185,13 @@ components:
           type: string
           format: date-time
           example: 2021-01-01T00:00:00Z
+        tags:
+          type: array
+          items:
+            $ref: '#/components/schemas/Tag'
+        user:
+          type: object
+          $ref: '#/components/schemas/User'
     User:
       type: object
       properties:
